--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ HOST='localhost'
 
 #### Database
 POSTGRES_PORT=5432
-POSTGRES_HOST=localhost
+POSTGRES_HOST=postgresdb
 POSTGRES_NAME=postgres
 POSTGRES_USERNAME=postgres
 POSTGRES_PASSWORD=admin123
